# nyc-taxi-predictions-2025

./: .gitignore  main.py  pyproject.toml
app/: api.py  main.py
app/api/: api.py  requirements.txt
app/ui/: main.py
experiments/: 01-databricks_mlflow_model_experiments.ipynb  challenger-experiments.ipynb
experiments/experiments/mlruns/0/: meta.yaml
experiments/experiments/mlruns/models/workspace.default.nyc-taxi-model/: meta.yaml
experiments/experiments/preprocessor/: preprocessor.b
experiments/mlruns/0/: meta.yaml
notebooks/: initial_Tracking.ipynb  mlflow.db
notebooks/mlruns/1/models/m-052c469336cf4c99ad9091dc2a764017/artifacts/: MLmodel
notebooks/mlruns/1/models/m-9b9b1a0a10664881a3c75c11d74c087e/artifacts/: MLmodel  conda.yaml  model.pkl
notebooks/mlruns/2/ab25ac102b3c436daddb1c5e141ebaba/artifacts/: estimator.html
notebooks/mlruns/2/afea141a72b34e70aa75bd11903b0dfa/artifacts/: estimator.html
notebooks/mlruns/2/b8e440cdd37c4b888eb23fe6d973a1ad/artifacts/: estimator.html
notebooks/mlruns/2/f1d84b7701df40e19bbf033d3ddcb0e7/artifacts/: estimator.html
notebooks/mlruns/2/models/m-12be6fb98bfc46ebbed2031336e8a71d/artifacts/: MLmodel  model.pkl
notebooks/mlruns/2/models/m-51d99e9886e4423f917020ceb789d0c0/artifacts/: MLmodel
notebooks/mlruns/2/models/m-68bd3886a6aa41cab75a9a1d2fcfaf3b/artifacts/: MLmodel  model.pkl
notebooks/models/: preprocessor.b
training_pipeline/: 02-train_pipeline_prefect.py  train_challenger.py
training_pipeline/mlruns/0/: meta.yaml
training_pipeline/mlruns/165388815854435768/: meta.yaml
(+12 files in other folders)
