[project]
name = "nyc-taxi-predictions-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2024.11.0",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.6",
    "mlflow>=3.4.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
]
