[project]
name = "nyc-taxi-predictions-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]==0.120.1",
    "fastparquet==2024.11.0",
    "ipykernel==6.30.1",
    "jupyter==1.1.1",
    "jupyterlab==4.4.9",
    "matplotlib==3.10.6",
    "mlflow==3.4.0",
    "numpy==2.3.3",
    "optuna==4.5.0",
    "pandas==2.3.3",
    "pip==25.2",
    "pipreqs>=0.5.0",
    "prefect==3.4.25",
    "psutil==7.1.0",
    "pyarrow==21.0.0",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "streamlit==1.51.0",
    "xgboost==3.1.1",
]
